adding comments to styling

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,7 +2,8 @@
 
 <%- include('partials/header') -%>
 <div class="container">
-  <div class="row mt-5">
+    <!-- Leon's class styles: col-6 is six columns across, mt-5 is margin-top , mb-3 is margin-bottom  -->
+  <div class="row mt-5"> <!-- style: row with a margin-top size 5 -->
       <div class="col-6">
           <div>
               <p><strong>User Name</strong>: <%= user.userName %></p>
