--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <%- include('partials/header') -%>
 
 <main class="container">
-    <div class="row justify-content-around mt-5">
+    <div class="row justify-content-around mt-5"> <!-- justify-content-around (flex behavior for contents) This is a single row. margin-top-size five -->
         <a href="/login" class="col-3 btn btn-primary"> Login</a>
         <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
     </div>
