--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,8 +2,8 @@
 <%- include('partials/header') -%>
 
 <main class="container">
-  <div class="row justify-content-center">
-    <section class="col-6 mt-5">
+  <div class="row justify-content-center"> <!-- centers content to middle of the page -->
+    <section class="col-6 mt-5"> <!-- six column's width with a margin-top spacing size 5  -->
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
       <div class="alert alert-danger"><%= el.msg %></div>
       <% }) %> <% } %> <% if (locals.messages.info) { %> <%
@@ -11,7 +11,7 @@
       <div class="alert alert-info"><%= el.msg %></div>
       <% }) %> <% } %>
       <form action="/login" method="POST">
-        <div class="mb-3">
+        <div class="mb-3"> <!-- margin-bottom spacing size 3 -->
           <label for="exampleInputEmail1" class="form-label"
             >Email address</label
           >
