--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,17 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bum-or-bust</title>
-    <!-- This document will be and ejs input inside any view document -->
-
-    <!-- icon link to image -->
-    <!--<link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/imgs/favicon-32x32.png"
-    />-->
-
+    <title>Lumbr Social</title>
     <!-- Bootstap Doc requirement to see CSS stylesheets -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
@@ -35,8 +25,8 @@
   <body>
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Binary Upload Boom</a></h1>
-        <span>The #100Devs Social Network</span>
+        <h1 class=""><a href="/profile">Lumbr Social</a></h1>
+        <span>Who will carry the boats and the logs?</span>
       </div>
     </header>
   </body>
