fully working build

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,11 @@
 <%- include('partials/header') -%>
 
 <main class="container">
-    <div class="row justify-content-around mt-5"> <!-- justify-content-around (flex behavior for contents) This is a single row. margin-top-size five -->
-        <a href="/login" class="col-3 btn btn-primary"> Login</a>
-        <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
-    </div>
+  <div class="row justify-content-around mt-5">
+    <!-- justify-content-around (flex behavior for contents) This is a single row. margin-top-size five -->
+    <a href="/login" class="col-3 btn btn-primary"> Login</a>
+    <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
+  </div>
 </main>
-    
 
 <%- include('partials/footer') -%>
-<!-- -->
