index,login,partials,post,profile,signup

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,11 +33,14 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <header class="container">
-      <div class="text-center">
-        <h1 class=""><a href="/profile">Binary Upload Boom</a></h1>
-        <span>The #100Devs Social Network</span>
+    <nav class="navbar navbar-light bg-warning">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/profile">
+          <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+          Lumbr Social
+        </a>
+          <span>Everyone is a winner!</span>
       </div>
-    </header>
+    </nav>
   </body>
 </html>
