--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,42 +1,56 @@
 <!-- Login Page, asks for email and password -->
 <%- include('partials/header') -%>
 
-<main class="container">
-  <div class="row justify-content-center">
-    <section class="col-6 mt-5">
-      <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
-      <div class="alert alert-danger"><%= el.msg %></div>
-      <% }) %> <% } %> <% if (locals.messages.info) { %> <%
-      messages.info.forEach( el => { %>
-      <div class="alert alert-info"><%= el.msg %></div>
-      <% }) %> <% } %>
-      <form action="/login" method="POST">
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label"
-            >Email address</label
-          >
-          <input
-            type="email"
-            class="form-control"
-            id="exampleInputEmail1"
-            aria-describedby="emailHelp"
-            name="email"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="exampleInputPassword1"
-            name="password"
-          />
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </section>
-  </div>
-</main>
+ 
+<div class="col-md-12">
+  <div class="modal-dialog" style="margin-bottom:0">
+      <div class="modal-content">
+                  <div class="panel-heading">
+                      <h3 class="panel-title">Sign In</h3>
+                  </div>
+                  <div class="panel-body">
+                      <form role="form">
+
+
+                                    <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
+                                    <div class="alert alert-danger"><%= el.msg %></div>
+                                    <% }) %> <% } %> <% if (locals.messages.info) { %> <%
+                                    messages.info.forEach( el => { %>
+                                    <div class="alert alert-info"><%= el.msg %></div>
+                                    <% }) %> <% } %>
+                                    <form action="/login" method="POST">
+                                      <div class="mb-3"> <!-- margin-bottom spacing size 3 -->
+                                        <label for="exampleInputEmail1" class="form-label"
+                                          >Email address</label
+                                        >
+                                        <input
+                                          type="email"
+                                          class="form-control"
+                                          id="exampleInputEmail1"
+                                          aria-describedby="emailHelp"
+                                          name="email"
+                                        />
+                                      </div>
+                                      <div class="mb-3">
+                                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                                        <input
+                                          type="password"
+                                          class="form-control"
+                                          id="exampleInputPassword1"
+                                          name="password"
+                                        />
+                                      </div>
+                                      <button type="submit" class="btn btn-warning">Submit</button>
+                                    </form>
+                                  </section>
+                                </div>
+
+
+                            </fieldset>
+                      </form>
+                  </div>
+              </div>
+
 
 <%- include('partials/footer') -%>
 <!-- -->
