--- a/views/post.ejs
+++ b/views/post.ejs
@@ -11,7 +11,7 @@
           action="/post/likePost/<%= post.id %>?_method=PUT"
           method="POST"
         >
-          <button class="btn btn-primary fa fa-heart" type="submit"></button>
+          <button class="btn btn-warning" fa fa-heart" type="submit"></button>
         </form>
         <h3 class="col-3">Likes: <%= post.likes %></h3>
         <%if(post.user == user.id){ %>
@@ -20,7 +20,7 @@
           method="POST"
           class="col-3"
         >
-          <button class="btn btn-primary fa fa-trash" type="submit"></button>
+          <button class="btn btn-warning" fa fa-trash" type="submit"></button>
         </form>
         <%}%>
       </div>
@@ -29,8 +29,8 @@
       <p><%= post.caption %></p>
     </div>
     <div class="col-sm-6 mt-5">
-      <a class="btn btn-primary" href="/profile">Return to Profile</a>
-      <a class="btn btn-primary" href="/feed">Return to Feed</a>
+      <a class="btn btn-warning" href="/profile">Return to Profile</a>
+      <a class="btn btn-warning" href="/feed">Return to Feed</a>
     </div>
   </div>
 </div>
