--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,7 +7,7 @@
           <div>
               <p><strong>User Name</strong>: <%= user.userName %></p>
               <p><strong>Email</strong>: <%= user.email %></p>
-              <a href="/logout" class="col-3 btn btn-primary">Logout</a>
+              <a href="/logout" class="col-3 btn btn-warning"">Logout</a>
           </div>
           <div class="mt-5">
             <h2>Add a post</h2>
@@ -24,7 +24,7 @@
                 <label for="imgUpload" class="form-label">Image</label>
                 <input type="file" class="form-control" id="imageUpload" name="file">
               </div>
-              <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+              <button type="submit" class="btn btn-warning" value="Upload">Submit</button>
             </form>
           </div>
       </div>
@@ -39,7 +39,7 @@
         <% } %>
         </ul>
         <div class="row justify-content-center mt-5">
-          <a class="btn btn-primary" href="/feed">Return to Feed</a>
+          <a class="btn btn-warning" href="/feed">Return to Feed</a>
         </div>  
       </div>  
     </div>
