fixed login bug, now it properly redirects to profile upon succesful login

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,14 +23,22 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-light bg-warning">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/profile">
-          <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-          Lumbr Social
-        </a>
+    <header>
+      <nav class="navbar navbar-light bg-warning">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/profile">
+            <img
+              src="/docs/5.0/assets/brand/bootstrap-logo.svg"
+              alt=""
+              width="30"
+              height="24"
+              class="d-inline-block align-text-top"
+            />
+            Lumbr Social
+          </a>
           <span>Everyone is a winner!</span>
-      </div>
-    </nav>
+        </div>
+      </nav>
+    </header>
   </body>
 </html>
