fixed a bug on the login page and changed home page background

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,13 @@
 <!-- homepage; asks if you want to login or signup (only works if you aren't already signed in, goes to profile page if you are already logged in-->
 <%- include('partials/header') -%>
 
-<main class="container">
+<main class="container-fluid p-0">
     <div
-    class="bg-image p-5 text-center shadow-1-strong rounded mb-100 text-white"
-    style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.jpg');
-    height: 100vh;"
+    class="bg-image p-5 text-center rounded text-white"
+    style="background-image: url('https://images.unsplash.com/photo-1508193638397-1c4234db14d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80');
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;"
   >
     <h1 class="mb-3 h2">Welcome to Lumbr Social</h1>
   
