--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,16 +26,7 @@
     <header>
       <nav class="navbar navbar-light bg-warning">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/profile">
-            <img
-              src="/docs/5.0/assets/brand/bootstrap-logo.svg"
-              alt=""
-              width="30"
-              height="24"
-              class="d-inline-block align-text-top"
-            />
-            Lumbr Social
-          </a>
+          <a class="navbar-brand" href="/profile"> Lumbr Social </a>
           <span>Everyone is a winner!</span>
         </div>
       </nav>
